# notion-sync

./: .gitignore  Cargo.toml  Dockerfile  config.exmple.toml  docker-bake.hcl  docker-compose.yml  fnox.toml
.github/workflows/: docker-publish.yml
scripts/: release.sh
src/: config.rs  main.rs  notion.rs  queue.rs  render.rs  scheduler.rs  storage.rs  sync.rs  webhook.rs
