[package]
name = "notion-sync"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
axum = { version = "0.7", features = ["macros"] }
figment = { version = "0.10", features = ["env", "toml", "yaml"] }
hex = "0.4"
hmac = "0.12"
log = "0.4"
logforth = "0.18"
opendal = { version = "0.49", features = ["services-fs", "services-s3"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
time = { version = "0.3", features = ["parsing"] }
tokio = { version = "1.37", features = ["macros", "rt-multi-thread"] }
