[package]
name = "notion-sync"
version = "0.0.7"
edition = "2024"

[dependencies]
anyhow = "1.0"
axum = { version = "0.8", features = ["macros"] }
figment = { version = "0.10", features = ["env", "toml", "yaml"] }
hex = "0.4"
hmac = "0.12"
log = "0.4"
logforth = { version = "0.29", features = ["starter-log"] }
opendal = { version = "0.55", features = ["services-b2", "services-fs", "services-s3"] }
redis = { version = "0.27", features = ["tokio-comp"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
time = { version = "0.3", features = ["parsing"] }
tokio = { version = "1.48", features = ["macros", "rt-multi-thread"] }
